# blog

./: db.sqlite3  instructions.md  pyproject.toml
blog/: settings.py  urls.py
posts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_updated.py  0003_alter_post_timestamp.py  0004_auto_20211220_1249.py
readme_pages/: djangorestframework-simplejwt.md  permissions.md  serializers.md  views.md
